fix z-index issues

--- a/client/src/modules/core/index.css
+++ b/client/src/modules/core/index.css
@@ -38,12 +38,12 @@ code {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  z-index: 9999;
+  z-index: 3;
   position: relative;
 }
 
 .editor * {
-  z-index: 9999;
+  z-index: 3;
 }
 
 #container-homejs.dark .ql-snow.ql-toolbar button.ql-active .ql-stroke {
@@ -233,7 +233,7 @@ blockquote {
 }
 #share-popup {
   position: fixed;
-  z-index: 9999;
+  z-index: 5;
   top: 50vh;
   left: 50vw;
   transform: translate(-50%, -50%);
@@ -246,7 +246,7 @@ blockquote {
 
 .popup-container {
   position: fixed;
-  z-index: 9999;
+  z-index: 5;
   top: 50vh;
   left: 50vw;
   transform: translate(-50%, -50%);
@@ -270,8 +270,10 @@ blockquote {
   width: 100vw;
   height: 100vh;
   background-color: hsla(0, 0%, 0%, 0.5);
-  z-index: 9998;
+  z-index: 4;
 }
+
+
 
 .notes-overlay {
   position: fixed;
@@ -279,13 +281,13 @@ blockquote {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: hsla(0, 0%, 5%, 0.3);
-  z-index: 9998;
+  background-color: hsla(0, 0%, 5%, 0.4);
+  z-index: 3;
+
 }
 
 .root-element.dark .popup-container {
   background-color: hsl(0, 0%, 35%);
-  border: 1px solid hsl(0, 0%, 85%);
   color: hsl(0, 0%, 85%);
 }
 
@@ -325,7 +327,6 @@ blockquote {
   position: relative;
   flex: 1;
   transition: flex 0.5s ease;
-  z-index: 9998;
 }
 
 .entry-main:hover {
